--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,10 @@
     border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
 }
 
+.article:hover {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
 .article .article-header {
     display: flex;
     justify-content: space-between;
