--- a/public/css/base.css
+++ b/public/css/base.css
@@ -2,6 +2,8 @@
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;     /* Màu chữ cho web */
+    --link-color: #007bff; /* Màu cho link trong văn bản */
+    --link-color-hover: #087cce; /* Màu cho link trong văn bản khi hover */
     --bg-color: #f0f2f5;
     --bg-top: #1e73be;
     --border-color: #dee2e6;
@@ -40,13 +42,17 @@ h3, h4, h5, h6 {
     line-height: 2.5rem;
 }
 
+ul li, ol li {
+    line-height: 2.5rem;
+}
+
 p {
     line-height: 2.5rem;
 }
 
 a {
     text-decoration: none;
-    color: var(--link-color);
+    color: var(--text-color);
 }
 
 img {
