--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,7 +19,7 @@
 }
 
 .article:hover {
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 10px 20px rgb(188 188 188 / 80%);
 }
 
 .article .article-header {
@@ -62,6 +62,10 @@
 
 .article-author-time .article-date {
     font-size: 1.2rem;
+}
+
+.article .badge {
+    display: none;
 }
 
 .share-social {
