--- a/public/css/single.css
+++ b/public/css/single.css
@@ -9,6 +9,7 @@
 
 .single .article-main .article-figure img {
     width: 100%;
+    max-height: 450px;
 }
 
 .single .article-main .article-content {
