--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,17 +109,12 @@
     margin-bottom: 25px;
 }
 
-.pagination .navbar-item {
-    margin: 0 5px;
+.pagination .btn-primary {
+    background-color: var(--primary-color);
+    border: none;
+    color: var(--white-color);
 }
 
-.pagination .navbar-link {
-    font-size: 1.6rem;
-    font-weight: 700;
-    padding: 8px 12px;
-    background-color: var(--white-color);
-    border-radius: 5px;
-}
 .pagination .navbar-link:hover {
     color: var(--link-color-hover);
 }
