--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -9,12 +9,17 @@
     background-color: var(--white-color);
     border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
     font-size: 1.5rem;
-    padding: 15px;
+    padding: 8px 15px;
     margin-bottom: 20px;
 }
 .sidebar .widget .widget-title {
+    display: inline-block;
     margin: 0px;
     padding: 5px 0;
+    
+}
+.sidebar .widget .widget-title a:hover {
+    color: var(--link-color-hover);
 }
 
 .sidebar .widget .widget-post {
