--- a/public/css/single.css
+++ b/public/css/single.css
@@ -67,6 +67,43 @@
     margin-bottom: 0px;
 }
 
+.article-content .post-pagination {
+    display: flex;
+    padding: 15px 0px;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.post-pagination .prev-post {
+    padding-right: 25px;
+    text-align: left;
+}
+
+.post-pagination .next-post {
+    padding-left: 25px;
+    text-align: right;
+}
+.post-pagination span {
+    color: var(--bg-footer);
+}
+.post-pagination a {
+    line-height: 3.2rem;
+    font-size: 2rem;
+    font-weight: 700;
+}
+.post-pagination a:hover {
+    color: var(--bg-top);
+}
+
+@media (max-width: 1024px) {
+    .article-content .post-pagination {
+        flex-direction: column;
+    }
+    .post-pagination .prev-post {
+        margin-bottom: 15px;
+    }
+}
+
 .single .article .article-footer {
     padding: 0 10px;
 }
