--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -94,6 +94,10 @@
     .list .article-main {
         flex-direction: column;
     }
+
+    .list .article-main .article-figure {
+        width: 100%;
+    }
     
     .list.reverse .article-main {
         flex-direction: column-reverse;
