--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -9,17 +9,12 @@
     background-color: var(--white-color);
     border-radius: max(0px, min(8px, ((100vw - 4px) - 100%) * 9999)) / 8px;
     font-size: 1.5rem;
-    padding: 8px 15px;
+    padding: 15px;
     margin-bottom: 20px;
 }
 .sidebar .widget .widget-title {
-    display: inline-block;
     margin: 0px;
     padding: 5px 0;
-    
-}
-.sidebar .widget .widget-title a:hover {
-    color: var(--link-color-hover);
 }
 
 .sidebar .widget .widget-post {
@@ -28,10 +23,8 @@
 }
 
 .sidebar .widget .item-post {
-    display: block;
     list-style: none;
     display: flex;
-    line-height: 0px;
     padding: 15px 0;
     border-bottom: 1px solid var(--border-color);
     align-items: center;
@@ -45,12 +38,11 @@
     border-bottom: none;
 }
 
-
-.sidebar .widget .item-post span a {
-    display: block;
-    width: 85px;
+.sidebar .widget .item-post a {
+    max-width: 90px;
     margin-right: 8px;
 }
+
 .sidebar .widget .item-post h4 {
     margin: 0px;
     padding: 0px;
