--- a/public/css/wiki.css
+++ b/public/css/wiki.css
@@ -67,6 +67,11 @@
   margin: 0px;
   padding-left: 25px;
 }
+@media (max-width: 740px) {
+  .wiki .sidebar ul {
+    padding-right: 25px;
+  }
+}
 .wiki .sidebar-list .list-item {
   list-style: none;
 }
