--- a/public/css/wiki.css
+++ b/public/css/wiki.css
@@ -1,7 +1,6 @@
 .main-content.wiki {
   margin: 0px;
   font-size: 1.6rem;
-  overflow: hidden;
 }
 .wiki .content,
 .wiki .sidebar {
@@ -14,6 +13,10 @@
   padding-right: 30px;
   margin-right: 0px;
 }
+.wiki-body p {
+  overflow-wrap: anywhere;
+}
+
 .wiki-body h1,
 .wiki-body h2,
 .wiki-body h3,
@@ -37,9 +40,7 @@
 .main-content.wiki .sidebar {
   margin-left: 0px;
 }
-.wiki p {
-  overflow: hidden;
-}
+
 .wiki a {
   color: var(--link-color);
 }
@@ -58,6 +59,12 @@
   margin-left: 0px;
   margin-right: 0px;
 }
+.post-pagination {
+  margin-top: 30px;
+  border-top: 1px solid var(--border-color);
+}
+
+/* Side bar */
 .wiki .sidebar-nav {
   position: sticky;
   top: 56px;
