--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,7 +21,8 @@
   box-shadow: 0 10px 20px rgb(188 188 188 / 80%);
 }
 
-.article .article-header {
+.article .article-header,
+.wiki-article .wiki-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
