--- a/public/css/pages.css
+++ b/public/css/pages.css
@@ -2,6 +2,12 @@
   font-size: 1.8rem;
 }
 
+@media (max-width: 740px) {
+  .pages {
+    padding: 0px 10px;
+  }
+}
+
 .pages a {
   color: var(--link-color);
 }
