--- a/public/css/wiki.css
+++ b/public/css/wiki.css
@@ -14,7 +14,8 @@
   margin-right: 0px;
 }
 
-.wiki .wiki-name-author a {
+.wiki .wiki-name-author a,
+.author-decription a {
   color: var(--hover-color);
   font-weight: bold;
 }
@@ -85,13 +86,36 @@
   margin-right: 0px;
 }
 
+.wiki-content .author-box {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: 1px solid var(--border-color);
+  display: flex;
+  align-items: center;
+}
+
+.author-box .author-avatar {
+  max-width: 120px;
+  min-width: 120px;
+  margin-right: 15px;
+}
+
+.author-box .author-avatar img {
+  border-radius: 50%;
+  border: rgb(250, 0, 0) solid 2px;
+  box-shadow: 0px 0px 8px 8px rgba(220, 0, 0, 0.5);
+}
+
+.article-content .author-box p {
+  margin-bottom: 0px;
+}
+
 .post-pagination {
   display: flex;
   padding: 15px 0px;
   justify-content: space-between;
   border-bottom: 1px solid var(--border-color);
   margin-top: 30px;
-  border-top: 1px solid var(--border-color);
 }
 .post-pagination .prev-post {
   padding-right: 25px;
@@ -114,6 +138,11 @@
 .post-pagination a:hover {
   color: var(--bg-top);
 }
+
+.wiki-content #comments {
+  margin-top: 25px;
+}
+
 /* Side bar */
 .wiki .sidebar-nav {
   position: sticky;
